--- a/admin.html
+++ b/admin.html
@@ -1,64 +1,69 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>لوحة تحكم - ASH</title>
+<meta charset="utf-8">
+<title>لوحة التحكم - ASH</title>
 <link rel="stylesheet" href="style.css">
-<!-- Firebase (compat) -->
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
-<header class="site-header"><div class="logo">ASH Admin Dashboard</div><button id="logoutBtn" class="mini">خروج</button></header>
-<main class="container">
-  <h2>قائمة الحجوزات</h2>
-  <table id="bookingsTable"><thead><tr><th>الاسم</th><th>الهاتف</th><th>الخدمة</th><th>العنوان</th><th>التاريخ</th><th>الحالة</th><th>أفعال</th></tr></thead><tbody></tbody></table>
-</main>
+<h2>لوحة التحكم - الطلبات</h2>
+<table id="bookings-table" border="1" cellpadding="5" cellspacing="0">
+  <thead>
+    <tr>
+      <th>الاسم</th>
+      <th>رقم الهاتف</th>
+      <th>الخدمة</th>
+      <th>العنوان</th>
+      <th>التاريخ</th>
+      <th>حالة الطلب</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- الطلبات ستظهر هنا -->
+  </tbody>
+</table>
 
-<script>
-// paste firebaseConfig
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+
+// Firebase configuration
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_AUTH_DOMAIN",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_STORAGE_BUCKET",
-  messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyAJxzFknapSh0fnPfIXwEEK3OijSKlqxco",
+  authDomain: "admin-ash-f622c.firebaseapp.com",
+  projectId: "admin-ash-f622c",
+  storageBucket: "admin-ash-f622c.firebasestorage.app",
+  messagingSenderId: "76505742154",
+  appId: "1:76505742154:web:dc4f190f9f2de80acb1fb3",
+  measurementId: "G-MNPL104YPN"
 };
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
 
-// protect page - redirect to login if not signed in
-auth.onAuthStateChanged(user => {
-  if(!user) { window.location.href = 'login.html'; return; }
-});
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-document.getElementById('logoutBtn').addEventListener('click', ()=> auth.signOut().then(()=> window.location.href='login.html'));
+// عرض الطلبات
+async function loadBookings() {
+  const tableBody = document.querySelector("#bookings-table tbody");
+  tableBody.innerHTML = ""; // تفريغ الجدول قبل التحميل
 
-// realtime listener
-db.collection('bookings').orderBy('createdAt','desc').onSnapshot(snapshot=>{
-  const tbody = document.querySelector('#bookingsTable tbody');
-  tbody.innerHTML = '';
-  snapshot.forEach(doc=>{
-    const d = doc.data();
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${d.name || ''}</td>
-      <td>${d.phone || ''}</td>
-      <td>${d.service || ''}</td>
-      <td>${d.address || ''}</td>
-      <td>${d.date || ''}</td>
-      <td><select data-id="${doc.id}" class="status">${d.status||'new'}<option value="new">new</option><option value="in_progress">in_progress</option><option value="done">done</option></select></td>
-      <td><button data-id="${doc.id}" class="del">حذف</button></td>
+  const querySnapshot = await getDocs(collection(db, "bookings"));
+  querySnapshot.forEach((doc) => {
+    const data = doc.data();
+    const row = document.createElement("tr");
+    row.innerHTML = `
+      <td>${data.name}</td>
+      <td>${data.phone}</td>
+      <td>${data.service}</td>
+      <td>${data.address}</td>
+      <td>${data.date}</td>
+      <td>${data.status}</td>
     `;
-    tbody.appendChild(tr);
+    tableBody.appendChild(row);
   });
-  // attach listeners
-  document.querySelectorAll('.del').forEach(b=> b.onclick = ()=> db.collection('bookings').doc(b.dataset.id).delete());
-  document.querySelectorAll('.status').forEach(s=> s.onchange = ()=> db.collection('bookings').doc(s.dataset.id).update({status: s.value}));
-});
+}
+
+loadBookings();
 </script>
 </body>
 </html>
