--- a/booking.html
+++ b/booking.html
@@ -4,86 +4,97 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>احجز خدمة - ASH</title>
-<link rel="stylesheet" href="style.css">
-<!-- Firebase (compat) -->
+
+<!-- EmailJS -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+<!-- Firebase Compat -->
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="site-header">
-  <div class="logo">ASH Window Cleaning</div>
-  <nav><a href="booking.html">احجز خدمة</a> | <a href="login.html">لوحة التحكم</a></nav>
-</header>
 
-<main class="container">
-  <h2>احجز خدمة</h2>
-  <form id="booking-form">
-    <label>الاسم</label>
-    <input type="text" name="name" required>
+<h2>احجز خدمة</h2>
 
-    <label>رقم الهاتف</label>
-    <input type="text" name="phone" required>
+<form id="booking-form">
+  <label>الاسم</label>
+  <input id="name" required>
 
-    <label>الخدمة</label>
-    <select name="service">
-      <option>تنظيف النوافذ</option>
-      <option>تنظيف الواجهات</option>
-      <option>خدمات دورية</option>
-    </select>
+  <label>رقم الهاتف</label>
+  <input id="phone" required>
 
-    <label>العنوان</label>
-    <input type="text" name="address">
+  <label>الخدمة</label>
+  <select id="service">
+    <option>تنظيف النوافذ</option>
+    <option>تنظيف الواجهات</option>
+    <option>خدمات دورية</option>
+  </select>
 
-    <label>التاريخ</label>
-    <input type="date" name="date">
+  <label>العنوان</label>
+  <input id="address">
 
-    <button type="submit">إرسال الطلب</button>
-  </form>
-  <p id="msg"></p>
-</main>
+  <label>التاريخ</label>
+  <input id="date" type="date">
+
+  <button type="submit">إرسال الطلب</button>
+</form>
+
+<p id="msg"></p>
 
 <script>
-  // Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJxzFknapSh0fnPfIXwEEK3OijSKlqxco",
-    authDomain: "admin-ash-f622c.firebaseapp.com",
-    projectId: "admin-ash-f622c",
-    storageBucket: "admin-ash-f622c.firebasestorage.app",
-    messagingSenderId: "76505742154",
-    appId: "1:76505742154:web:590ca78470cbe708cb1fb3",
-    measurementId: "G-0N1HEG1XRG"
+// ===== Firebase Config =====
+const firebaseConfig = {
+  apiKey: "AIzaSyAJxzFknapSh0fnPfIXwEEK3OijSKlqxco",
+  authDomain: "admin-ash-f622c.firebaseapp.com",
+  projectId: "admin-ash-f622c",
+  storageBucket: "admin-ash-f622c.appspot.com",
+  messagingSenderId: "76505742154",
+  appId: "1:76505742154:web:dc4f190f9f2de80acb1fb3"
+};
+
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
+
+// Initialize EmailJS
+emailjs.init("dKDZhGvgDZ2OwDlZF");
+
+// ===== On Submit =====
+document.getElementById("booking-form").addEventListener("submit", function(e){
+  e.preventDefault();
+
+  const data = {
+    name: document.getElementById("name").value.trim(),
+    phone: document.getElementById("phone").value.trim(),
+    service: document.getElementById("service").value,
+    address: document.getElementById("address").value.trim(),
+    date: document.getElementById("date").value,
+    status: "new",
+    createdAt: firebase.firestore.FieldValue.serverTimestamp()
   };
 
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  const form = document.getElementById("booking-form");
-  const msg = document.getElementById("msg");
-
-  form.addEventListener("submit", function(e) {
-    e.preventDefault();
-
-    const data = {
-      name: form.name.value.trim(),
-      phone: form.phone.value.trim(),
-      service: form.service.value,
-      address: form.address.value.trim(),
-      date: form.date.value || '',
-      status: 'new',
-      createdAt: firebase.firestore.FieldValue.serverTimestamp()
-    };
-
-    db.collection("bookings").add(data)
-      .then(() => {
-        msg.textContent = "✔ تم إرسال الطلب وحفظه بنجاح!";
-        form.reset();
-      })
-      .catch(err => {
-        console.error(err);
-        msg.textContent = "❌ حدث خطأ أثناء حفظ الطلب.";
-      });
-  });
+  // Save to Firestore
+  db.collection("bookings").add(data)
+    .then(() => {
+      // Send Email
+      emailjs.send("service_glkvhot", "template_v6qi0el", data)
+        .then(() => {
+          document.getElementById("msg").textContent = "✔ تم إرسال الطلب بنجاح!";
+          document.getElementById("booking-form").reset();
+        })
+        .catch(err => {
+          console.error(err);
+          document.getElementById("msg").textContent = "❗ تم الحفظ لكن لم يتم إرسال الإيميل.";
+        });
+    })
+    .catch(err => {
+      console.error(err);
+      document.getElementById("msg").textContent = "❌ حدث خطأ، حاول مرة أخرى.";
+    });
+});
 </script>
+
 </body>
 </html>
